增加源码编译hive，增加Hive on Spark的配置